--- a/ext/carol-defaults.properties
+++ b/ext/carol-defaults.properties
@@ -62,7 +62,7 @@ carol.jrmp.url=rmi://localhost:1099
 carol.jrmp.interceptor.pkgs=org.objectweb.PortableInterceptor.JRMPInitializerClass
 
 ######################################################################
-#                   Configuration for Rmi IIOP                       #
+#                   Configuration for Rmi IIOP with sun jdk ORB                      #
 ######################################################################
 
 # portable remote object delegate class for this protocol (full class name with package)
@@ -79,6 +79,25 @@ carol.iiop.url=iiop://localhost:2000
 
 # interceptors prefix
 carol.iiop.interceptor.pkgs=org.omg.PortableInterceptor.ORBInitializerClass
+
+######################################################################
+#                   Configuration for Rmi IIOP with openORB                      #
+######################################################################
+
+# portable remote object delegate class for this protocol (full class name with package)
+carol.openorb.PortableRemoteObjectClass=org.openorb.rmi.system.PortableRemoteObjectDelegateImpl
+
+# Name service class for this protocol
+carol.openorb.NameServiceClass=org.objectweb.carol.jndi.ns.OpenOrbCosNaming
+
+# configuration for rmi jrmp jndi
+# java.naming.factory.initial property
+carol.openorb.context.factory=org.objectweb.carol.jndi.iiop.OpenOrbReferenceContextWrapperFactory
+# java.naming.provider.url property
+carol.openorb.url=corbaloc::localhost:12350
+
+# interceptors prefix
+carol.openorb.interceptor.pkgs=org.omg.PortableInterceptor.ORBInitializerClass
 
 ######################################################################
 #                   Configuration for JEREMIE                        #
