* src/conf/Scarab.properties - added template.ViewQuery.vm.title=Title for   the new ViewQuery.vm template. * src/i18n/ScarabBundle_en_US.properties - added ViewQuery.vm.Title and   ReadOnlyViewOfQuery keys for use in the new ViewQuery.vm template * src/java/org/tigris/scarab/actions/Search.java - renamed doGotoeditquery   to doPreparequery.  The previous name went with how it was used but the   method itself has nothing to do with a particular template.  Also left in   some commented code that I want to get working, but could not track down   all the dependencies. * src/java/org/tigris/scarab/tools/ScarabRequestTool.java - getEditLink:   use the new method name in Search. * src/templates/macros/AdvancedQueryMacro.vm - advancedQuery macro: added   $includeButtons argument that can be used to suppress buttons meant for   editing the query. * src/templates/screens/AdvancedQuery.vm and * src/templates/screens/EditQuery.vm - account for advancedQuery macro   argument list change and pass true so that edit buttons are rendered. * src/templates/screens/admin/Approval.vm - show the query using the   read-only ViewQuery.vm template. Added file: * src/templates/screens/ViewQuery.vm - A read-only template suitable for   reviewing a query for approval without getting sidetracked with buttons   that are used for editing the query.
Issue number: pcn 20599
Submitted by: jmcnally@collab.net
Reviewed by: kmaples@collab.net

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -231,6 +231,7 @@ services.ScarabSecurity.action.admin.SetInfoMessage=Domain__Edit
 #
 template.default.title=ScarabWordMark
 template.AdvancedQuery.vm.title=Title
+template.ViewQuery.vm.title=Title
 template.AssignIssue.vm.title=Title
 template.ChangePassword.vm.title=Title
 template.ConfigureIssueList.vm.title=Title
