--- a/conf/test/cactus.properties
+++ b/conf/test/cactus.properties
@@ -1,6 +1,7 @@
 # Configuration file for Cactus Testing for Struts 1.1
 
-cactus.contextURL = http://localhost:9090/test
+# cactusURL is set in the top level build file.
+cactus.contextURL = @cactus.contextURL@
 cactus.enableLogging = true
 cactus.filterRedirectorName = FilterRedirector
 cactus.jspRedirectorName = JspRedirector
