Do not allow to perform any actions except "Cross module query","Manage issue types" and "Approve/Reject user submission" if there are no issue types associated with the current module.
*src/java/org/tigris/scarab/screens/Default.java -
 #getTargetForNoIssueTypes():
 New method to return value of the property "template.[screen].noIssueTypesForwardsTo" if it is specified in Scarab.properties
 #doBuildTemplate()-Added condition to redirect to the alternate screen specified, if there are no issue types in the current module.

*src/conf/Scarab.properties -
 Added new resources for templates require issue types in the current module.

*src/i18n/ScarabBundle_en_US.properties -
 Added new resource "EnterNewIssueType"

*src/java/org/tigris/scarab/screens/entry/Wizard1.java -
 #getTitle():Removed unnecessary creation of String object.

*src/templates/navigations/CommonLinks.vm
*src/templates/screens/entry/Wizard3.vm -
 l10n.EnterNew replaced with $l10n.format("EnterNewIssueType", "value") to comply with the change made to "EnterNewIssueType" in resource bundle.

*src/templates/macros/MITListMacro.vm -
 Do not include current module's issue type if it's just been removed, in the cross module query tab.

*src/java/org/tigris/scarab/actions/Search.java -
 #doSavequery(): After saving a query, redirect to the cross module query page if the current issue type is null.

*src/java/org/tigris/scarab/actions/SelectIssueType.java -
 #doSelect():Check if the current issue type is still globally available. It is possible that it was globally removed
 before the user clicks that issue type in the "Enter new" tab.

*src/java/org/tigris/scarab/pipeline/FreshenUserValve.java -
 #setCurrentIssueType(): check that the current issue type is not deleted globally.

Issue        : PCN20782
Submitted by : Arun
Reviewed by  : Venkat, Dlr

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -1,4 +1,4 @@
-# Role requests for these roles will be granted automatically 
+# Role requests for these roles will be granted automatically
 # when a user requests a role in a module through the role request
 # UI screens.
 scarab.automatic.role.approval=@SCARAB_AUTOMATIC_ROLE_APPROVAL@
@@ -346,3 +346,12 @@ scarab.concurrent.search.max=20
 # immediately available.  If not given or value is negative, we block till a 
 # search can be started. A value of 0 will fail immediately.
 scarab.concurrent.search.wait=30
+
+#Templates require issue types
+template.entry/Wizard1.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
+template.entry/Wizard3.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
+template.QueryList.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
+template.TemplateList.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
+template.reports/ReportList.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
+template.admin/XMLExportIssues.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
+template.admin/XMLImportIssues.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
