--- a/build.xml
+++ b/build.xml
@@ -808,32 +808,32 @@
         description="Compile main website">
     <!-- Create the taglib documentation -->
     <style   basedir="${doc.dir}" destdir="${build.home}/documentation"
-           extension=".html" style="stylesheets/struts.xsl" includes="*.xml"/>
+           extension=".html" style="${doc.dir}/stylesheets/struts.xsl" includes="*.xml"/>
     <!-- Create the faqs -->
     <style   basedir="${doc.dir}/faqs"
              destdir="${build.home}/documentation/faqs"
-           extension=".html" style="../stylesheets/faqs.xsl"
+           extension=".html" style="${doc.dir}/stylesheets/faqs.xsl"
             includes="*.xml"/>
     <!-- Create the news -->
     <style   basedir="${doc.dir}/news"
              destdir="${build.home}/documentation/news"
-           extension=".html" style="../stylesheets/news.xsl"
+           extension=".html" style="${doc.dir}/stylesheets/news.xsl"
             includes="*.xml"/>
     <!-- Create the proposals -->
     <style   basedir="${doc.dir}/proposals"
              destdir="${build.home}/documentation/proposals"
-           extension=".html" style="../stylesheets/proposals.xsl"
+           extension=".html" style="${doc.dir}/stylesheets/proposals.xsl"
             includes="*.xml"/>
     <!-- Create the resources -->
     <style   basedir="${doc.dir}/resources"
              destdir="${build.home}/documentation/resources"
-           extension=".html" style="../stylesheets/resources.xsl"
+           extension=".html" style="${doc.dir}/stylesheets/resources.xsl"
             includes="*.xml"/>
     <!-- Create the user guide -->
     <!--   ... browser version ... -->
     <style   basedir="${doc.dir}/userGuide"
              destdir="${build.home}/documentation/userGuide"
-           extension=".html" style="../stylesheets/userGuide.xsl"
+           extension=".html" style="${doc.dir}/stylesheets/userGuide.xsl"
             includes="*.xml">
       <param name="relative-path" expression=".."/>
     </style>
@@ -841,7 +841,7 @@
     <mkdir       dir="${build.home}/documentation/userGuide/printer"/>
     <style   basedir="${doc.dir}/userGuide"
              destdir="${build.home}/documentation/userGuide/printer"
-           extension=".html" style="../stylesheets/userGuide.xsl"
+           extension=".html" style="${doc.dir}/stylesheets/userGuide.xsl"
             includes="*.xml">
       <param name="relative-path" expression="../.."/>
       <param name="project-menu" expression="nomenu"/>
