--- a/plugins/org.columba.example.PythonHelloWorldAction/plugin.xml
+++ b/plugins/org.columba.example.PythonHelloWorldAction/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<plugin id="org.columba.example.PythonHelloWorldAction" name="My Hello World Plugin" description="Simple Example" version="1.0" >
+<plugin id="org.columba.example.PythonHelloWorldAction" name="Python Hello World Plugin" description="Simple Example" category="Examples" version="1.0" >
  <extension name="org.columba.core.action">
   <action name="PythonHelloWorld" class="PythonHelloWorldAction.py" />
  </extension>
