--- a/plugins/org.columba.core.MetouiaLookAndFeel/plugin.xml
+++ b/plugins/org.columba.core.MetouiaLookAndFeel/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<plugin id="org.columba.core.MetouiaLookAndFeel" name="Metouia Look And Feel" description="Metouia Look And Feel" version="1.0" >
+<plugin id="org.columba.core.MetouiaLookAndFeel" name="Metouia Look And Feel" description="Metouia Look And Feel" category="Look and Feel"  version="1.0" >
  <extension name="org.columba.core.theme">
   <theme name="Metouia" class="MetouiaLookAndFeelPlugin"/>
  </extension>
