--- a/plugins/org.columba.example.PythonHelloWorldFilterAction/plugin.xml
+++ b/plugins/org.columba.example.PythonHelloWorldFilterAction/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<plugin id="org.columba.example.HelloWorld" name="Hello World python filter action plugin" description="Displays Hello World" version="1.0" >
+<plugin id="org.columba.example.HelloWorld" name="Python Filter Action" description="Displays Hello World" category="Examples" version="1.0" >
  <extension name="org.columba.mail.filteraction">
   <filteraction name="Hello World" main_class="HelloWorld.py" gui_class="HelloWorldGui.py" />
  </extension>
