--- a/plugins/org.columba.mail.MozillaMailImportFilter/plugin.xml
+++ b/plugins/org.columba.mail.MozillaMailImportFilter/plugin.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-
-<plugin id="org.columba.mail.MozillaMailImportFilter" name="Mozilla Mail Importfilter" description="Import complete Mozilla Mail Account" version="1.0" >
- <extension name="org.columba.mail.import">
-  <filter name="MozillaMailImportFilter" class="org.columba.mail.MozillaMailImportFilter"/>
- </extension>
- <runtime type="java"/>
+<plugin name="Mozilla Mail Importfilter" description="Import complete Mozilla Mail Account" id="org.columba.mail.MozillaMailImportFilter" version="1.0" category="Mail Import" enabled="true">
+  <extension name="org.columba.mail.import">
+    <filter name="MozillaMailImportFilter" class="org.columba.mail.MozillaMailImportFilter"></filter>
+  </extension>
+  <runtime type="java"></runtime>
 </plugin>
