--- a/build.xml
+++ b/build.xml
@@ -254,7 +254,7 @@
         <mkdir dir="${build.home}/library/classes/META-INF"/>
         <mkdir dir="${build.home}/library/classes/META-INF/tlds"/>
         <mkdir dir="${build.home}/library/classes/org/apache/struts/resources"/>
-        <copy file="LICENSE"
+        <copy file="LICENSE.txt"
             tofile="${build.home}/library/classes/META-INF/LICENSE"/>
         <copy todir="${build.home}/library/classes/org/apache/struts/resources">
             <fileset dir="${conf.share.dir}" includes="**/*.dtd"/>
@@ -408,7 +408,7 @@
 -->
     <target name="dist.source" depends="prepare.dist">
         <copy file="INSTALL" tofile="${dist.home}/INSTALL"/>
-        <copy file="LICENSE" tofile="${dist.home}/LICENSE"/>
+        <copy file="LICENSE.txt" tofile="${dist.home}/LICENSE"/>
         <copy file="README" tofile="${dist.home}/README"/>
     </target>
 
