Correct loading order of properties files to go from most local (current directory) to most global (${user.home}/build.properties).  Since Ant follows a "first definition wins" strategy, this makes the most sense for our convention of allowing local overrides of global values.  It also means that I can now do an "ant dist" in the top level directory with only one thing in my build.properties file (jdk.version=1.4), so this should fix the nightly builds as well (verifying that is my next step).
Also fixed some compile errors in struts-el -- I don't know how that code
could have compiled for anyone.  Could someone more familiar with that
library make sure I did the changes correctly?

--- a/build.xml
+++ b/build.xml
@@ -113,9 +113,9 @@
 -->
 
     <!-- Load local and user build preferences -->
-    <property file="${user.home}/build.properties"/>
-    <property file="../build.properties"/>
     <property file="build.properties"/>
+    <property file="../build.properties"/>
+    <property file="${user.home}/build.properties"/>
 
     <!-- Default values for unspecified properties -->
     <property name="catalina.home"   value="../jakarta-tomcat-4.0/build"/>
@@ -204,6 +204,9 @@
 
     <!-- Web directory -->
     <property name="web.dir" value="web"/>
+
+    <!-- Pointer to struts-legacy.jar -->
+    <property name="struts-legacy.jar" value="${basedir}/contrib/struts-legacy/dist/struts-legacy.jar"/>
 
     <!-- Compilation Classpath -->
     <path id="compile.classpath">
