--- a/contrib/struts-faces/build.xml
+++ b/contrib/struts-faces/build.xml
@@ -6,6 +6,8 @@
 
   <!-- Initialize property values -->
   <property file="build.properties"/>
+  <property file="../../build.properties"/>
+  <property file="../../../build.properties"/>
   <property file="${user.home}/build.properties"/>
 
 
