--- a/contrib/struts-legacy/build.xml
+++ b/contrib/struts-legacy/build.xml
@@ -1,7 +1,7 @@
 <!--
 @author Ted Husted
 @author Craig McClanahan
-@version $Revision: 1.8 $ $Date: 2003/07/31 20:15:50 $
+@version $Revision: 1.9 $ $Date: 2003/08/09 19:29:30 $
 -->
 
 <project name="struts-legacy" default="compile">
@@ -11,7 +11,8 @@
     <!-- See "build.properties.sample" for the preferences you can set      -->
 
     <property file="build.properties"/>               <!-- Component local  -->
-    <property file="../../build.properties"/>         <!-- Struts local    -->
+    <property file="../../build.properties"/>         <!-- Struts local     -->
+    <property file="../../../build.properties"/>      <!-- Jakarta local    -->
     <property file="${user.home}/build.properties"/>  <!-- User local       -->
 
 
