--- a/contrib/struts-chain/build.properties.sample
+++ b/contrib/struts-chain/build.properties.sample
@@ -6,8 +6,10 @@
 # source code.  To use this file, make a copy of it in "build.properties" and
 # customize the values as required.
 #
-# $Id: build.properties.sample,v 1.1 2003/08/11 04:55:33 craigmcc Exp $
-
+# $Id: build.properties.sample,v 1.2 2003/08/11 06:28:38 rleland Exp $
+#
+### Inorder to build you must have the catalina-ant.jar in your CLASSPATH
+### this is located under the jakarta-tomcat/server/lib directory
 
 # The absolute or relative pathname of the directory containing your
 # Servlet API classes JAR file (servlet.jar)
