Addition of MappingDispatchAction that dispatches to a method named by the ActionMapping parameter
PR:	17117 Suggested by Anthony Kay

--- a/src/share/org/apache/struts/actions/LocalStrings.properties
+++ b/src/share/org/apache/struts/actions/LocalStrings.properties
@@ -10,3 +10,5 @@ include.path=No context-relative URI specified via the 'parameter' attribute
 include.rd=Cannot create request dispatcher for path {0}
 switch.prefix=Invalid module prefix {0} was specified
 switch.required=Switch requires both 'prefix' and 'page' request parameters
+success.required=SuccessAction could not find an ActionForward named 'success' for path '{0}'
+mapping.parameter=ActionMapping[{0}] does not define a 'parameter' attribute
