--- a/.project
+++ b/.project
@@ -6,9 +6,9 @@
 		<project>common</project>
 		<project>j2ee</project>
 		<project>jmx</project>
-		<project>management</project>
 		<project>naming</project>
 		<project>persistence</project>
+		<project>remoting</project>
 		<project>system</project>
 		<project>thirdparty</project>
 		<project>transaction</project>
