--- a/build.xml
+++ b/build.xml
@@ -4,9 +4,9 @@
     <property name="doc_dir" value="${basedir}/doc"/>
     <property name="dist_dir" value="${basedir}"/>
     <property name="version" value="1.3.3"/>
-    <property jarname="version" value="dnsjava-${version}.jar"/>
-    <property zipname="version" value="dnsjava-${version}.zip"/>
-    <property targzname="version" value="dnsjava-${version}.tar.gz"/>
+    <property name="jarname" value="dnsjava-${version}.jar"/>
+    <property name="zipname" value="dnsjava-${version}.zip"/>
+    <property name="targzname" value="dnsjava-${version}.tar.gz"/>
 
     <target name="all" description="Compile and Jar" depends="jar">
     </target>
@@ -25,7 +25,7 @@
         </javac>
     </target>
 
-    <target name="jar" description="Makes dnsjava.jar" depends="compile">
+    <target name="jar" description="Makes dnsjava.jar" depends="compile, docs">
         <jar jarfile="${dist_dir}/${jarname}"
              basedir="${dist_dir}" includes="**/*.class"/>
     </target>
@@ -33,7 +33,7 @@
     <target name="clean" description="Remove old class files">
         <delete>
             <fileset dir="${build_dir}" includes="**/*.class"/>
-            <fileset dir="${build_dir}" includes="*.jar"/>
+            <fileset dir="${build_dir}" includes="*.jar *.zip *.tar.gz"/>
         </delete>
     </target>
 
@@ -50,4 +50,12 @@
     <target name="docsclean" description="Remove old documentation">
         <delete dir="${doc_dir}"/>
     </target>
+
+    <target name="sourcedist" description="Builds source distributions"
+            depends="compile">
+        <zip destfile="${zipname}" basedir="${build_dir}" includes="**/*.java"/>
+        <tar destfile="${targzname}" basedir="${build_dir}"
+             compression="gzip" includes="**/*.java"/>
+    </target>
+
 </project>
