--- a/build.xml
+++ b/build.xml
@@ -53,9 +53,10 @@
 
     <target name="sourcedist" description="Builds source distributions"
             depends="compile">
-        <zip destfile="${zipname}" basedir="${build_dir}" includes="**/*.java"/>
+        <zip destfile="${zipname}" basedir="${build_dir}"
+             excludes="**/*.class"/>
         <tar destfile="${targzname}" basedir="${build_dir}"
-             compression="gzip" includes="**/*.java"/>
+             compression="gzip" excludes="**/*.class"/>
     </target>
 
 </project>
