--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,8 @@
     <classpathentry kind="lib" path="lib/jargs.jar"/>
     <classpathentry kind="lib" path="lib/lucene-1.3-rc1.jar"/>
     <classpathentry kind="lib" path="lib/jwizz-0.1.0.jar"/>
+    <classpathentry kind="lib" path="lib/plastic.jar"/>
+    <classpathentry kind="lib" path="lib/jhall.jar"/>
+    <classpathentry kind="lib" path="lib/usermanual.jar"/>
     <classpathentry kind="output" path="classes"/>
 </classpath>
