--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@ Have fun ... your Columba Team!
 	<!-- here we should use the cvs-verion info for automatic replace the version -->
 	<property name="version" value="0.12.0"/>
 	<property name="dest" value="${basedir}/classes"/>
-	<property name="ownclasspath" value="${dest}:${classpath}:${src}/lib/log4j.jar:${src}/lib/lucene-1.3-rc1.jar:${src}/lib/junit.jar:${src}/lib/jakarta-oro-2.0.6.jar:${src}/lib/jargs.jar:${src}/lib/jwizz-0.1.0.jar:${src}/lib/plastic.jar"/>
+	<property name="ownclasspath" value="${dest}:${classpath}:${src}/lib/log4j.jar:${src}/lib/lucene-1.3-rc1.jar:${src}/lib/junit.jar:${src}/lib/jakarta-oro-2.0.6.jar:${src}/lib/jargs.jar:${src}/lib/jwizz-0.1.0.jar:${src}/lib/plastic.jar:${src}/lib/jhall.jar:${src}/lib/usermanual.jar"/>
 
 
 	<!-- definition of the task to check the style of the java-code -->
@@ -157,7 +157,7 @@ Have fun ... your Columba Team!
 			<exclude name="native/**"/>
 			<manifest>
 				<attribute name="Main-Class" value="org.columba.core.main.Main"/>
-				<attribute name="Class-Path" value="lib/log4j.jar lib/junit.jar lib/jakarta-oro-2.0.6.jar lib/lucene-1.3-rc1.jar lib/jargs.jar lib/jwizz-0.1.0.jar lib/plastic.jar"/>
+				<attribute name="Class-Path" value="lib/log4j.jar lib/junit.jar lib/jakarta-oro-2.0.6.jar lib/lucene-1.3-rc1.jar lib/jargs.jar lib/jwizz-0.1.0.jar lib/plastic.jar lib/jhall.jar lib/usermanual.jar"/>
 				<attribute name="Sealed" value="false"/>
 			</manifest>
 		</jar>
@@ -236,7 +236,6 @@ else echo "cannot find columba.jar in `pwd`"; fi
 				<exclude name="plugins/**" />
 				<exclude name="classes/**"/>
 			</zipfileset>
-			<zipfileset dir="." includes="native/win32/windows_maximize/bin/WindowMaximizer.dll" fullpath="columba-win32-${version}-bin/WindowMaximizer.dll"/>
 			<zipfileset dir="." includes="native/win32/launcher/bin/columba.exe" fullpath="columba-win32-${version}-bin/columba.exe"/>
 		</zip>
 	</target>
@@ -262,7 +261,6 @@ else echo "cannot find columba.jar in `pwd`"; fi
 				<include name="CHANGES"/>
 				<include name="AUTHORS"/>
 				<include name="run_source.sh"/>
-				<include name="run_source_jdk13.sh"/>
 				<include name="plugins/**/*.py"/>
 				<include name="plugins/**/*.java"/>
 				<include name="plugins/**/*.xml"/>
@@ -294,7 +292,6 @@ else echo "cannot find columba.jar in `pwd`"; fi
 				<include name="CHANGES"/>
 				<include name="AUTHORS"/>
 				<include name="run_source.bat"/>
-				<include name="run_source_jdk13.bat"/>
 				<include name="plugins/**/*.py"/>
 				<include name="plugins/**/*.java"/>
 				<include name="plugins/**/*.xml"/>
@@ -332,6 +329,8 @@ else echo "cannot find columba.jar in `pwd`"; fi
            <include name="lib/jargs.jar"/>
            <include name="lib/plastic.jar"/>
 	       <include name="lib/jwizz-0.1.0.jar"/>
+	       <include name="lib/jhall.jar"/>
+	       <include name="lib/usermanual.jar"/>
           </fileset>
          </signjar>
         </target>
