Modified Files: * src/conf/Scarab.properties - removed properties for XModuleList.vm   and ModuleQuery.vm and added them for IssueTypeList.vm * src/i18n/ScarabBundle_en_US.properties -   Added keys: IssueTypeList.vm.Title, EnterNewIssue, EnterNewBriefInstructions,   AdvancedQuery, CustomQuery, IssueTypeListMoreThanOne, NoIssueTypeList,   IssueTypesInModuleAndSavedLists, AllIssueTypesInModule, StartListFromSaved,   SavedListsOfIssueTypes, NoSavedIssueTypeLists, PreviouslySelectedIssueTypes,   OtherModuleIssuesInDomain, CurrentModuleTypesIntro, NewQuery,   NewQueryWithNewIssueTypes, TemplateListBriefInstructions   Modified keys: ToQuery, SelectSaveXModuleQuery, SelectSaveXModuleReport   Removed keys: home/ModuleQuery.vm.Title, home/XModuleList.vm.Title,   EnterNew, IssueTypesInModule, AllIssueTypes, BuildListOfIssueTypes,   UsePreviouslySavedList, ModuleIssuesInDomain, NewModuleQuery, Custom,   NewModuleQuery * src/java/org/tigris/scarab/actions/ConfigureIssueList.java - doSave:   add alert in the event the mitlist is null (this should not happen) * src/java/org/tigris/scarab/actions/ConfigureReport.java - doCreatenew:   if a mitlist (list of module/issue types) is available start on Info.vm   otherwise reports,XModuleList.vm * src/java/org/tigris/scarab/actions/DefineXModuleList.java - complete   refactoring to handle the main task of ModuleQuery action which is removed.   Also to support a quick issue type selection then going directly to   query/report without having to build up the list first.  Added a stub   method to allow removing previously saved lists, but its not implemented. * src/java/org/tigris/scarab/actions/QueryList.java - doSave():   remove variable that wasn't used.   doGotoadvancedquery: go to whichever query template is most appropriate   (might want to change the method name) * src/java/org/tigris/scarab/actions/ReportIssue.java - account for   scarabR.getNextEntryTemplate signature change.  and added doStart action   to remove an issue that was s

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -127,8 +127,6 @@ services.ScarabSecurity.screen.ViewIssue.vm=Issue__View
 services.ScarabSecurity.screen.ViewAttachment.vm=Issue__View
 
 services.ScarabSecurity.screen.home.EnterNew.vm=Issue__Enter
-services.ScarabSecurity.screen.home.ModuleQuery.vm=Issue__Search
-services.ScarabSecurity.screen.home.XModuleList.vm=Issue__Search
 
 services.ScarabSecurity.screen.QueryList.vm=User__Edit_Preferences
 services.ScarabSecurity.screen.TemplateList.vm=User__Edit_Preferences
@@ -257,6 +255,7 @@ template.TemplateList.vm.title=Title
 template.UserList.vm.title=Title
 template.ViewIssue.vm.title=Title
 template.ViewIssueLong.vm.title=Title
+template.IssueTypeList.vm.title=Title
 
 template.admin/AddPermission.vm.title=Title
 template.admin/AddRole.vm.title=Title
@@ -329,8 +328,6 @@ template.reports/Content.vm.title=Title
 template.reports/ReportList.vm.title=Title
 
 template.home/EnterNew.vm.title=Title
-template.home/ModuleQuery.vm.title=Title
-template.home/XModuleList.vm.title=Title
 
 
 # Maximum number of concurrent searches.  If not given or value is negative, 
@@ -348,10 +345,8 @@ scarab.concurrent.search.max=20
 scarab.concurrent.search.wait=30
 
 #Templates require issue types
-template.entry/Wizard1.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
-template.entry/Wizard3.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
-template.QueryList.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
-template.TemplateList.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
-template.reports/ReportList.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
-template.admin/XMLExportIssues.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
-template.admin/XMLImportIssues.vm.noIssueTypesForwardsTo=home\,XModuleList.vm
+template.entry/Wizard1.vm.noIssueTypesForwardsTo=IssueTypeList.vm
+template.entry/Wizard3.vm.noIssueTypesForwardsTo=IssueTypeList.vm
+template.TemplateList.vm.noIssueTypesForwardsTo=IssueTypeList.vm
+template.admin/XMLExportIssues.vm.noIssueTypesForwardsTo=IssueTypeList.vm
+template.admin/XMLImportIssues.vm.noIssueTypesForwardsTo=IssueTypeList.vm
