--- a/build.xml
+++ b/build.xml
@@ -548,21 +548,23 @@
      packagenames="org.apache.log4j,
        org.apache.log4j.plugins,
        org.apache.log4j.config,
-                         org.apache.log4j.helpers,
-             org.apache.log4j.jmx,
-             org.apache.log4j.lf5,
-             org.apache.log4j.net,
+       org.apache.log4j.helpers,
+       org.apache.log4j.jmx,
+       org.apache.log4j.lf5,
+       org.apache.log4j.net,
        org.apache.log4j.nt,
-             org.apache.log4j.or,
-             org.apache.log4j.jdbc,
-             org.apache.log4j.or.sax,
-             org.apache.log4j.or.jms,
-                   org.apache.log4j.performance,
-             org.apache.log4j.spi,
+       org.apache.log4j.or,
+       org.apache.log4j.jdbc,
+       org.apache.log4j.or.sax,
+       org.apache.log4j.or.jms,
+       org.apache.log4j.performance,
+       org.apache.log4j.rolling,
+       org.apache.log4j.spi,
        org.apache.log4j.varia,
-             org.apache.log4j.chainsaw,
-             org.apache.log4j.xml,
-             org.apache.log4j.xml.examples"
+       org.apache.log4j.chainsaw,
+       org.apache.log4j.xml,
+       org.apache.log4j.xml.examples"
+     additionalparam="-breakiterator"
      version="true"
      protected="true"
      author="true"
@@ -576,6 +578,8 @@
       <link href="http://java.sun.com/products/jdk/1.3/docs/api"/>
       <link href="http://java.sun.com/j2ee/sdk_1.3/techdocs/api/"/>
       <classpath refid="compile.classpath"/>
+      <classpath path="${regexp.oro.jar}"/>
+      <classpath path="${avalon-framework.jar}"/>
     </javadoc>
   </target>
 
